k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tourismpay
  labels:
    app.kubernetes.io/part-of: tourismpay
    environment: production
