k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tourismpay-web
  namespace: tourismpay
  labels:
    app: tourismpay-web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tourismpay-web
---
apiVersion: v1
kind: Service
metadata:
  name: tourismpay-settlement
  namespace: tourismpay
  labels:
    app: tourismpay-settlement
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tourismpay-settlement
---
apiVersion: v1
kind: Service
metadata:
  name: tourismpay-ml
  namespace: tourismpay
  labels:
    app: tourismpay-ml
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: fraud
      name: fraud
    - port: 8002
      targetPort: compliance
      name: compliance
    - port: 8003
      targetPort: scoring
      name: scoring
    - port: 8004
      targetPort: exchange
      name: exchange
  selector:
    app: tourismpay-ml
